# app/routes/v1/middleware/ensureAuthenticated.js
@@ -1,24 +1,12 @@
-var _ = require('underscore');
-
 module.exports = {
+    ensureAuthenticated: function (req, res, next) {
+        var anonymousPaths = ['/', '/api', '/api/auth'];
 
-    ensureAuthenticated: function(req, res, next) {
-        var anonymousPaths = [
-            '/',
-            '/api',
-            '/api/auth'
-        ];
-
-        return next();
-        /*
-        //Check if user is logged in or allowed unauthenticated path
-        if (req.isAuthenticated() || _(anonymousPaths).contains(req.path)) {
+        // Check if user is logged in or allowed unauthenticated path
+        if (req.isAuthenticated() || anonymousPaths.includes(req.path)) {
             return next();
-
         } else {
-
-            return res.status(401).json({message: "Not Authenticated"});
-        } */
-    }
-
-}
+            return res.status(401).json({ message: 'Not Authenticated' });
+        }
+    },
+};
